--- a/crypto_ml/config/config.example.json
+++ b/crypto_ml/config/config.example.json
@@ -4,5 +4,52 @@
     "consumer_secret": "",
     "access_token": "",
     "access_token_secret": ""
-  }
+  },
+
+  "supported_coins": [
+    "bitcoin",
+    "ethereum",
+    "binancecoin",
+    "tether",
+    "polkadot",
+    "cardano",
+    "ripple",
+    "uniswap",
+    "litecoin",
+    "chainlink",
+    "theta-fuel",
+    "theta-token",
+    "filecoin",
+    "bitcoin-cash",
+    "klay-token",
+    "drep-new",
+    "stellar",
+    "dogecoin",
+    "tron",
+    "bittorrent-2",
+    "solana",
+    "vechain",
+    "eos",
+    "aave",
+    "monero",
+    "cosmos",
+    "iota",
+    "bitcoin-cash-sv",
+    "holotoken",
+    "binance-usd",
+    "tezos",
+    "kusama",
+    "avalanche-2",
+    "neo",
+    "creditcoin-2",
+    "algorand",
+    "nem",
+    "huobi-token",
+    "chiliz",
+    "dash",
+    "decred",
+    "maker",
+    "chiliz",
+    "pancakeswap-token"
+  ]
 }
